--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
         android:layout_gravity="center"
         android:background="@null"
         android:scaleType="centerCrop"
-        android:src="@drawable/QuizMate" />
+        android:src="@drawable/quiz_mate" />
 
 
     <TextView
