--- a/app/src/main/res/layout/activity_edit_question.xml
+++ b/app/src/main/res/layout/activity_edit_question.xml
@@ -6,34 +6,77 @@
     android:padding="16dp"
     android:background="@color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/orange"
-        android:text="Edit Question"
-        android:textSize="24sp"
-        android:layout_gravity="center_horizontal"
-        android:paddingBottom="16dp" />
-
-    <EditText
-        android:id="@+id/editTextQuestion"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your question here"
-        android:padding="8dp" />
-
-    <EditText
-        android:id="@+id/editTextAnswer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter the answer here"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_corner"
+        android:backgroundTint="@color/orange"
         android:padding="8dp"
-        android:layout_marginTop="16dp" />
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit Questions"
+            android:textSize="35sp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:background="@color/white">
+    <EditText
+        android:id="@+id/et_dialog_question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter your question"
+        android:inputType="textMultiLine"
+        android:gravity="top"
+        android:minLines="2" />
+
+    <EditText
+        android:id="@+id/et_dialog_option1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Option 1" />
+
+    <EditText
+        android:id="@+id/et_dialog_option2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Option 2" />
+
+    <EditText
+        android:id="@+id/et_dialog_option3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Option 3" />
+
+    <EditText
+        android:id="@+id/et_dialog_option4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Option 4" />
+
+    <EditText
+        android:id="@+id/et_dialog_correct_answer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Correct Answer (1-4)" />
 
     <Button
-        android:id="@+id/buttonSave"
-        android:layout_width="match_parent"
+        android:id="@+id/btn_dialog_add_question"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp" />
+
+    </LinearLayout>
 </LinearLayout>
