--- a/app/src/main/res/layout/dialog_add_question.xml
+++ b/app/src/main/res/layout/dialog_add_question.xml
@@ -5,6 +5,25 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_corner"
+        android:backgroundTint="@color/orange"
+        android:padding="8dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Questions"
+            android:textSize="35sp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
     <EditText
         android:id="@+id/et_dialog_question"
         android:layout_width="match_parent"
@@ -12,7 +31,7 @@
         android:hint="Enter your question"
         android:inputType="textMultiLine"
         android:gravity="top"
-        android:minLines="3" />
+        android:minLines="2" />
 
     <EditText
         android:id="@+id/et_dialog_option1"
@@ -48,7 +67,7 @@
         android:id="@+id/btn_dialog_add_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Question"
+        android:text="Save"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp" />
 
