create database and models

--- a/app/src/main/res/layout/activity_edit_question.xml
+++ b/app/src/main/res/layout/activity_edit_question.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add Questions"
+            android:text="Edit Questions"
             android:textSize="35sp"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/white"
@@ -24,6 +25,12 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:background="@color/white">
     <EditText
         android:id="@+id/et_dialog_question"
         android:layout_width="match_parent"
@@ -71,4 +78,5 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp" />
 
+    </LinearLayout>
 </LinearLayout>
