--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -39,8 +39,7 @@
         android:id="@+id/btn_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Back"
-        android:marginTop="16dp" />
+        android:text="Back"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
