--- a/app/src/main/res/layout/activity_guest_main.xml
+++ b/app/src/main/res/layout/activity_guest_main.xml
@@ -21,34 +21,34 @@
         android:layout_marginTop="16dp" />
 
     <!-- Search Bar -->
-    <LinearLayout
-        android:id="@+id/searchBarContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/search_bar_background"
-        android:padding="8dp"
-        android:layout_marginTop="16dp">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/searchBarContainer"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:background="@drawable/search_bar_background"-->
+<!--        android:padding="8dp"-->
+<!--        android:layout_marginTop="16dp">-->
 
-        <EditText
-            android:id="@+id/searchBar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Search..."
-            android:padding="8dp"
-            android:background="@android:color/transparent"
-            android:layout_gravity="center_vertical" />
+<!--        <EditText-->
+<!--            android:id="@+id/searchBar"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:hint="Search..."-->
+<!--            android:padding="8dp"-->
+<!--            android:background="@android:color/transparent"-->
+<!--            android:layout_gravity="center_vertical" />-->
 
-        <ImageView
-            android:id="@+id/searchIcon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/ic_search"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
-            android:contentDescription="Search Icon" />
-    </LinearLayout>
+<!--        <ImageView-->
+<!--            android:id="@+id/searchIcon"-->
+<!--            android:layout_width="24dp"-->
+<!--            android:layout_height="24dp"-->
+<!--            android:src="@drawable/ic_search"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:contentDescription="Search Icon" />-->
+<!--    </LinearLayout>-->
 
     <!-- Placeholder for Background Image -->
     <ImageView
